Added public routes export, Added ability to save the starting point of a route.
